# rock-paper-scissors

./: .gitignore  README.md  RPS.py  main.py  pyproject.toml  test_module.py
.github/workflows/: install-test.yml  rock-paper-siccors.yml
