[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["farbian_2005 <fabian_bernhart@web.de>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
main = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
